# cfa-sero-protection

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/actions/pre-commit/: action.yaml
scripts/: scratch.py  scratch_swo.py  sim.py
seropro/: densities.py  samples.py  utils.py
tests/: samples.py
