[tool.poetry]
name = "cfa-sero-protection"
version = "0.1.0"
description = ""
authors = ["Edward Schrom <tec0@cdc.gov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^1.24.0"
numpy = "^2.2.3"
altair = "^5.5.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
